# DACSC2025

./: CMakeLists.txt  ClientConsultationBookerQtApp  ClientTest  ClientTest.cpp  ServeurTest  ServeurTest.cpp  makefile  package-lock.json
API-REST/: README.md  pom.xml
API-REST/src/main/java/api/: ConsultationHandler.java  DoctorHandler.java  MainAPI.java  PatientHandler.java  SpecialtyHandler.java
API-REST/src/main/java/common/config/: ConfigLoader.java
API-REST/src/main/java/common/entity/: Consultation.java  Doctor.java  Specialty.java
API-REST/src/main/java/common/protocol/: UpdateConsultationRequest.java
API-REST/src/main/java/server/dao/: ConsultationDAO.java  DoctorDAO.java  PatientDAO.java  SpecialtyDAO.java
API-REST/src/main/java/server/db/: DatabaseConnector.java
API-REST/src/main/java/server/util/: HttpUtils.java
API-REST/src/main/resources/: config.properties
ClientConsultationBookerQt/: ClientConsultationBooker  mainwindowclientconsultationbooker.cpp  mainwindowclientconsultationbooker.h
Librairie/: Librairie.c  Librairie.cpp  Librairie.h  Librairie.hpp
MedecinJava/: pom.xml
MedecinJava/src/main/java/ClientConsultation/classe/: Main.java
MedecinJava/src/main/java/ClientConsultation/protocole/: ServiceCAPClient.java
MedecinJava/src/main/java/ClientConsultation/vue/: DialogLogin.java  DialogModifierConsultation.java  DialogNouveauPatient.java  DialogNouvelleConsultation.java  FenetreConnecte.java  FenetrePrincipale.java
MedecinJava/src/main/java/HEPL/medecinJava/: Main.java
MedecinJava/src/main/java/HEPL/medecinJava/Protocol/: CAP.java  ProtocoleCAP.java  ReponseCAP.java  ReponseCAPAddConsultation.java  ReponseCAPAddPatient.java  ReponseCAPDeleteConsultation.java  ReponseCAPLogin.java  ReponseCAPLogout.java  ReponseCAPSearchConsultations.java  ReponseCAPTest.java  ReponseCAPUpdateConsultation.java  RequeteCAP.java  RequeteCAPAddConsultation.java  RequeteCAPAddPatient.java  RequeteCAPDeleteConsultation.java  RequeteCAPLogin.java  RequeteCAPLogout.java  RequeteCAPSearchConsultations.java  RequeteCAPTest.java  RequeteCAPUpdateConsultation.java
MedecinJava/src/main/java/HEPL/medecinJava/config/: ConfigConsultation.java
MedecinJava/src/main/java/HEPL/medecinJava/model/dao/: ConnectionBD.java  ConsultationDAO.java  DoctorDAO.java  PatientDAO.java  SpecialtyDAO.java
MedecinJava/src/main/java/HEPL/medecinJava/model/entity/: Consultation.java  Doctor.java  Patient.java  Specialty.java
MedecinJava/src/main/java/HEPL/medecinJava/model/viewmodel/: ConsultationSearchVM.java  DoctorSearchVM.java  PatientSearchVM.java  SpecialtySearchVM.java
MedecinJava/src/main/java/HEPL/medecinJava/serveur/: ServeurConsultation.java
MedecinJava/src/main/java/HEPL/medecinJava/test/: TestClientCAP.java  TestConsultationDAO.java  TestDoctorDAO.java  TestPatientDAO.java  TestSpecialtyDAO.java
MedecinJava/src/main/java/ServeurGeneriqueTCP/: FileAttente.java  FinConnexionException.java  Logger.java  LoggerConsole.java  Protocole.java  Reponse.java  Requete.java  ThreadClient.java  ThreadClientPool.java  ThreadServeurPool.java
MedecinJava/src/main/resources/: consultation.properties
Protocole/: CBP.c  CBP.cpp  CBP.h  CBP.hpp  SMOP.cpp  SMOP.h
ReservationC/: README.md  makefile
ReservationC/BD_Hospital/: README.md
ReservationC/ClientConsultationBookerQt/: ClientConsultationBooker  mainwindowclientconsultationbooker.cpp
ReservationC/Librairie/: Librairie.cpp
ReservationC/Protocole/: ACBP.cpp  ACBP.hpp  CBP.cpp  CBP.hpp
ReservationC/param/: param.h
ReservationC/serveurReservation/: Serveur.conf  Serveur.cpp  serveur
ReservationJava/: pom.xml
ReservationJava/src/main/java/HEPL/reservationAdmin/classe/: ClientAdmin.java  LecteurProtocole.java  Main.java
ReservationJava/src/main/java/HEPL/reservationAdmin/vue/: DialogAfficheConnexion.java  FenetrePrincipale.java  fenetrePrincipal.java
ServRapportMedical/: pom.xml
ServRapportMedical/src/main/java/client/: MainClient.java
ServRapportMedical/src/main/java/client/gui/: LoginDialog.java  RapportMedicalClientUI.java  ReportEditorDialog.java
ServRapportMedical/src/main/java/client/network/: NetworkManager.java
ServRapportMedical/src/main/java/common/config/: ConfigLoader.java
ServRapportMedical/src/main/java/common/crypto/: KeyStoreUtils.java  MyCrypto.java
ServRapportMedical/src/main/java/common/entity/: Doctor.java  Entity.java  Report.java
ServRapportMedical/src/main/java/common/protocol/: ReponseAddReport.java  ReponseEditReport.java  ReponseGetReports.java  ReponseLogin.java  ReponseLogout.java  RequeteAddReport.java  RequeteEditReport.java  RequeteGetReports.java  RequeteLogin.java  RequeteLogout.java
ServRapportMedical/src/main/java/server/: MainServer.java
ServRapportMedical/src/main/java/server/dao/: ConsultationDAO.java  DoctorDAO.java  ReportDAO.java
ServRapportMedical/src/main/java/server/db/: DatabaseConnector.java
ServRapportMedical/src/main/java/server/generic/: FinConnexionException.java  Logger.java  Protocole.java  Reponse.java  Requete.java  ThreadClient.java  ThreadClientDemande.java  ThreadServeur.java  ThreadServeurDemande.java
ServRapportMedical/src/main/java/server/logic/: MRPSProtocol.java
ServRapportMedical/src/main/resources/: config.properties
ServRapportMedical/src/main/resources/BD_Hospital/: CreationBD  CreationBD.cpp
ServRapportMedical/src/main/resources/keystores/: client.cer  client.jks  server.jks
client-patient/: README.md  index.html  package-lock.json  package.json
client-patient/src/: App.vue
client-patient/src/assets/: consultation.css  main.css
client-patient/src/components/: AvailableConsultations.vue  LoginPanel.vue  MyAppointments.vue
client-patient/src/model/: ConsultationDAO.ts  PatientDAO.ts  ReferenceDAO.ts
client-patient/src/router/: index.ts
client-patient/src/views/: ConsultationView.vue  LoginView.vue
param/: param.h
serveurReservation/: Serveur.conf  Serveur.cpp  serveur
